<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAD8D8"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Aboutryx">


        <ImageView
            android:id="@+id/aboutphoto"
            android:layout_width="269dp"
            android:layout_height="247dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/aboutryx" />

        <TextView
            android:id="@+id/aboutus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/app_aboutUs"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/aboutphoto"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/aboutphoto"
            app:layout_constraintTop_toBottomOf="@+id/aboutphoto" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="359dp"
            android:layout_height="156dp"
            android:layout_marginTop="12dp"
            android:text="@string/app_1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/aboutus"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="@+id/aboutus"
            app:layout_constraintTop_toBottomOf="@+id/aboutus" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="358dp"
            android:layout_height="105dp"
            android:layout_marginTop="180dp"
            android:text="@string/app_2"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/aboutus"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="@+id/aboutus"
            app:layout_constraintTop_toBottomOf="@+id/aboutus" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="355dp"
            android:layout_height="95dp"
            android:layout_marginTop="284dp"
            android:text="@string/app_3"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/aboutus"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/aboutus"
            app:layout_constraintTop_toBottomOf="@+id/aboutus" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="363dp"
            android:layout_height="55dp"
            android:layout_marginTop="388dp"
            android:text="@string/app_4"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/aboutus"
            app:layout_constraintStart_toStartOf="@+id/aboutus"
            app:layout_constraintTop_toBottomOf="@+id/aboutus" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="359dp"
            android:layout_height="54dp"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:srcCompat="@drawable/lineryx" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="146dp"
            android:layout_height="24dp"
            android:text="@string/app_mission"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="340dp"
            android:layout_height="62dp"
            android:layout_marginTop="32dp"
            android:text="@string/app_mission1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="350dp"
            android:layout_height="141dp"
            android:layout_marginTop="92dp"
            android:text="@string/app_mission2"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="359dp"
            android:layout_height="54dp"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:srcCompat="@drawable/lineryx" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="359dp"
            android:layout_height="54dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:srcCompat="@drawable/lineryx" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="357dp"
            android:layout_height="29dp"
            android:text="@string/app_vision"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="357dp"
            android:layout_height="29dp"
            android:text="@string/app_core"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="360dp"
            android:layout_height="45dp"
            android:layout_marginTop="12dp"
            android:text="@string/app_v1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="363dp"
            android:layout_height="1469dp"
            android:text="@string/app_core1"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>